mesa (25.0.2-1) UNRELEASED; urgency=medium

  * New upstream release.
  * patches: Fix spam from gfxstream. (Closes: #1100360)

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 20 Mar 2025 16:02:06 +0200

mesa (25.0.1-2) unstable; urgency=medium

  * rules: Build gfxstream only on 64bit. (Closes: #1099704)

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 07 Mar 2025 08:52:20 +0200

mesa (25.0.1-1) unstable; urgency=medium

  [ Timo Aaltonen ]
  * New upstream release.
  * control: Drop python3 dependency from mesa-vulkan-drivers. (Closes:
    #1061658)

  [ Gurchetan Singh ]
  * rules: enable gfxstream

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 06 Mar 2025 13:07:00 +0200

mesa (25.0.0-1) unstable; urgency=medium

  * New upstream release.
  * control: Make mesa-va-drivers depend on the same version of mesa-
    libgallium. (Closes: #1094190)
  * rules: Enable panvk, it's production quality now. (Closes: #1095969)

 -- Timo Aaltonen <tjaalton@debian.org>  Sun, 23 Feb 2025 11:22:33 +0200

mesa (25.0.0~rc3-1) experimental; urgency=medium

  * New upstream release candidate.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 13 Feb 2025 13:06:35 +0200

mesa (25.0.0~rc2-1) experimental; urgency=medium

  * New upstream release candidate.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 07 Feb 2025 19:30:14 +0200

mesa (25.0.0~rc1-2) experimental; urgency=medium

  * Merge from unstable.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 03 Feb 2025 12:41:43 +0200

mesa (25.0.0~rc1-1) experimental; urgency=medium

  * New upstream release candidate.
  * control: Remove libglapi-mesa, provided by mesa-libgallium now.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 31 Jan 2025 09:54:17 +0200

mesa (24.3.4-3) unstable; urgency=medium

  [ Dmitry Shachnev ]
  * Revert "Build with gcc-12 and -O1 on ppc64el".
  * Add a patch to disable ppc64el assembly code. (Closes: #1092890)

  [ Emilio Pozuelo Monfort ]
  * Release to sid.
