@@ -2,6 +2,7 @@ mesa (25.0.2-1) UNRELEASED; urgency=medium
 
   * New upstream release.
   * patches: Fix spam from gfxstream. (Closes: #1100360)
+  * rules: Update gentarball target to use xz and the current tree.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Thu, 20 Mar 2025 16:02:06 +0200
 
